seeing if edmonds bakery will fit/work

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #Created by webjeda - http://webjeda.com
 
-title: Bakery #Keep it short
+title: Edmonds Bakery #Keep it short
 email: your@email.com
 
 
