title fix and email update

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Created by webjeda - http://webjeda.com
 
 title: Edmonds Bakery #Keep it short
-email: your@email.com
+email: edmondsbakery@gmail.com
 
 
 baseurl: /bakery
