--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Edmonds Bakery 
 email: edmondsbakery@comcast.net
 
-### baseurl: edmondsbakery.github.io/
+### baseurl: bakery
 
 sass:
  style: compressed
