--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ sass:
  
  
 # Tracker
-analytics: UA-83979019-1
+# analytics: UA-83979019-1
  
 ### exclude the instructions / write-up in the README.md
 exclude:
